# python-deployer

./: .gitignore  README.md  RUSH_PROD_DEPLOY.sh  args.py  config.py  config.yaml.template  logger.py  main.py  production.py  pyproject.toml  test_deploy_endpoint.sh  test_trigger_deploy.sh  utils.py
.github/workflows/: deploy_to_rush_admin.yml
