[tool.poetry]
name = "python-deployer"
version = "0.1.0"
description = "A Flask Server that Listens and Responds to Deployment Webhooks "
authors = ["Samuel Morris <dodobird181@gmail.com>"]
license = "UNLICENSE. See https://unlicense.org."
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-limiter = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
